# routes/api.php
@@ -4,6 +4,7 @@ use App\Http\Controllers\Api\LoginController;
 use App\Http\Controllers\Api\AuthController;
 use App\Http\Controllers\Api\LogoutController;
 use App\Http\Controllers\Api\UserController;
+use App\Http\Controllers\Api\ForgotPasswordController;
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
 use Illuminate\Support\Str;
@@ -22,6 +23,14 @@ use Illuminate\Support\Str;
 Route::group(
     ['prefix' => 'v1'],
     function(){
+        Route::post('/forgot-password', [ForgotPasswordController::class,'forgot']);
+        // Route::get('/reset-password/{token}',[ForgotPasswordController::class,'reset'])->name('password.reset');
+        Route::get('/reset-password/{token}', function ($token) {
+            return view('auth.passwords.reset-password', ['token' => $token]);
+        })->middleware('guest')->name('password.reset');
+        // Route::post('/reset-password',[ForgotPasswordController::class,'updatePassword'])->name('password.update');
+
+
         Route::post('/login',[AuthController::class, 'Login']);
         Route::post('/register',[AuthController::class, 'Register']);
         Route::post('/refresh-token',[UserController::class, 'refreshToken']);
@@ -30,6 +39,7 @@ Route::group(
             Route::get('/user',[ UserController::class,'getUserProfile']);
             Route::post('/user/update',[ UserController::class,'updateUserProfile']);
             Route::post('/logout', [LogoutController::class,'logout']);
+            Route::post('/change-password', [UserController::class, 'changePassword']);
 
         });
         // Route::middleware('auth:api')->get('/user', function (Request $request) {
